2007-04-13  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * new count-ast regression test in asttools
        * factored out files of asttool regession tests
        * new oast file regression test in asttools
        * new module uplinks for computing the up/down links of a ast
        * new options -node -dia for ast_graph to print parts of a graph

2007-04-12  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fixed revision keyword in all.ast
        * add header with version number to all oast files (use all.ast
          revision as oast file version number, see module elsa/oast_header) 
        * new module asttools/superast that creates an ast_array
        * new blueprint astmatch.ml for walking over ast_array 
        * rewrote count-ast with ast_array as count-ast-new
        * fixed some count-ast bugs

2007-04-11  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * add revision cvs keyword to all.ast

        * use int32 for case labels

2006-12-20  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * move check_oast goal to protect against missing memcheck

        * merged upstream, versions:
        elsa-stack: 9  smbase: 490  ast: 280  elkhound: 1044  elsa: 2470

        * remove files that come from the upstream import

2006-12-19  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * memcheck renaming

        * updated doc's

        * XXX solved circularity for flags == DF_NAMESPACE: 
        * new circularity scope.namespace_var
        * regrtest pass

2006-12-18  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * rebuild all.ast
        * cleaned comments: ``HT: XXX'' is consistently used for places
          that need some fix

        * added hash sizes in scope ast nodes in ast_graph

2006-12-17  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * scope added in all asttool code
        * regression test run

2006-12-13  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * deleted old check-oast

        * use the new dynamic type checking to check scopes: Everything